maintainIT2/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Labor_Rate_Doubletime__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Labor Rate Doubletime</description>
        <inlineHelpText>Labor Rate Doubletime</inlineHelpText>
        <label>Labor Rate Doubletime</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Rate_Overtime__c</fullName>
        <description>Overtime Labor Rate to be applied to a Work Order Task when booking Overtime Hours</description>
        <inlineHelpText>Overtime Labor Rate to be applied to a Work Order Task when booking Overtime Hours</inlineHelpText>
        <label>Labor Rate Overtime</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Rate_Regular__c</fullName>
        <description>Regular Hourly Labor Rate to be used for this Work Order Labor Resource when charging time to a Work Order Task</description>
        <inlineHelpText>Regular Hourly Labor Rate - Used for Actual Costs when charging Regular Time to a Work Order</inlineHelpText>
        <label>Labor Rate Regular</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Order_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate Contact can be a Resource to assign to a Work Order, Work Order Task, or Work Order Task Labor in SaaSMaint</description>
        <inlineHelpText>Checkbox to indicate Contact can be a Resource to assign to a Work Order, Work Order Task, or Work Order Task Labor in SaaSMaint</inlineHelpText>
        <label>Work Order Resource</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>